--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "20"
           cache: "npm"
 
+            - name: Clear npm cache
+        run: npm cache clean --force
+        
       - name: Install dependencies
         run: npm ci
-
+        
       - name: Build project
         run: npm run build
         env:
