--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,24 +5,18 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -35,16 +29,17 @@ jobs:
           node-version: "20"
           cache: "npm"
 
-            - name: Clear npm cache
+      - name: Clear npm cache
         run: npm cache clean --force
-        
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Build project
         run: npm run build
         env:
           NODE_ENV: production
+          NODE_OPTIONS: "--experimental-modules"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -52,10 +47,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: "./dist"
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
